kubernetes/backrest/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backrest
  labels:
    app: backrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backrest
  template:
    metadata:
      labels:
        app: backrest
    spec:
      enableServiceLinks: true
      containers:
      - name: backrest
        image: garethgeorge/backrest:latest
        ports:
        - containerPort: 9898
          name: http
        volumeMounts:
        - name: backrest-data
          mountPath: /data
        - name: backrest-config
          mountPath: /config
        - name: backrest-userdata
          mountPath: /userdata
      volumes:
      - name: backrest-data
        persistentVolumeClaim:
          claimName: backrest-data-pvc
      - name: backrest-config
        persistentVolumeClaim:
          claimName: backrest-config-pvc
      - name: backrest-userdata
        persistentVolumeClaim:
          claimName: backrest-userdata-pvc
